Fix page2 on launchPage being too short on small screens.

--- a/client/launch/launch.css
+++ b/client/launch/launch.css
@@ -10,6 +10,7 @@
 	height: 100%;
 	position: absolute;
 	transition: all .25s;
+	min-height: 750px;
 }
 
 .topShadow {
